Implement new Hono API with Infinispan backend (#3104)
Restructure the device registry implementation and implement the new
management API and model. Enable authentication to the Infinispan
server.

This also re-enabled the systemtests for the Infinispan registry.